--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -540,6 +540,9 @@
   --activity-header-icon-color: color(#000 alpha(40%));
   --activity-header-icon-color-hover: color(#000 alpha(60%));
   /* ActivityList */
+  --activity-list-min-height: 56px;
+  --activity-list-vertical-padding: 14px;
+  --activity-list-icon-size: 28px;
   --activity-list-hover-background-color: #f2f2f2;
   --activity-list-padding: calc(var(--default-padding-large) * 1.5);
   --activity-list-arrow-color: var(--cool-grey);
